--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ NEW_RELIC_REGION=US  # or EU
 
 # Slack Configuration
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
-OPSGENIE_SLACK_EMAIL=opsgenie-jv-aaaapspxg6qkfwmd4rye7f46na@grid-employinc.org.slack.com
+OPSGENIE_SLACK_EMAIL=
 
 # IBM WatsonX Configuration (REQUIRED)
 WATSONX_APIKEY=your_watsonx_api_key_here
